# fast_zero

./: .gitignore  :memory  Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 10dd6111f2f4_create_todo_table.py  24c166c36bab_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_todo.py  test_users.py  teste_db.py
